# enterprise-knowledge-action-agent

./: .env.example  .gitignore  PROJECT_SUMMARY.md  README.md  enterprise_agent_project_spec.md  langgraph.json  pyproject.toml  requirements.txt
app/: __init__.py  config.py  graph.py  main.py  prompts.py  state.py  tools.py
app/mcp/: clients.py  resources.py
app/memory/: long_term.py  schemas.py  short_term.py
app/rag/: __init__.py  grading.py  ingest.py  retriever.py  rewrite.py  schemas.py
app/skills/: __init__.py  loader.py  registry.py
app/skills/meeting_summary/: SKILL.md
app/skills/policy_qa/: SKILL.md
app/skills/sql_analysis/: SKILL.md
data/knowledge_base/: 01_travel_expense_policy.md  02_leave_policy.md  03_procurement_policy.md  04_security_access_policy.md  05_remote_work_guideline.md  06_incident_response_sop.md  07_data_governance_handbook.md  08_sales_metric_dictionary.md  09_sql_schema_sales_orders.md  10_sql_schema_customers.md  11_monthly_ops_template.md  12_finance_close_calendar.md  13_product_release_process.md  14_customer_support_sla.md  15_hiring_interview_policy.md  16_meeting_notes_example_alpha.md  17_it_asset_policy.md  18_reimbursement_faq.md  19_org_abbreviation_map.md  20_readonly_sql_principles.md
data/mcp_stub/: resources.json
data/memory_store/: long_term_memory.json
evals/: dataset.jsonl  rubrics.md  run_eval.py
scripts/: ingest_docs.py
tests/: test_graph.py  test_mcp.py  test_memory.py  test_rag.py  test_skills.py
